# dioxus-animations

./: Cargo.toml
examples/: simple.rs
src/: backup_lib.rs  lib.rs
src/platform/: desktop.rs  mod.rs  web.rs
web_example/: Cargo.toml
web_example/src/: main.rs
