[package]
name = "dioxus-animations"
description = "Animations library for Dioxus."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "./README.md"
homepage = "https://github.com/marc2332/dioxus-animations"
repository = "https://github.com/marc2332/dioxus-animations"
keywords = ["dioxus", "animations"]
categories = ["gui"]

[dependencies]
easer = "0.3.0"
dioxus-core = "0.6.0"
dioxus-hooks = "0.6.0"
futures-util = "0.3.28"
uuid = { version = "1.4.1", features = ["v4"] }
futures-timer = "3.0.3"
dioxus-signals = "0.6.0"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
dioxus = "0.6.0"
dioxus-web = "0.6.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
