[workspace]
members = [".", "web_example"]

[package]
name = "dioxus-animations"
description = "Animations library for Dioxus."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "./README.md"
homepage = "https://github.com/marc2332/dioxus-animations"
repository = "https://github.com/marc2332/dioxus-animations"
keywords = ["dioxus", "animations"]
categories = ["gui"]

[dependencies]
easer = "0.3.0"
dioxus-core = "0.6.0"
dioxus-hooks = "0.6.0"
futures-util = "0.3.28"
uuid = { version = "1.4.1", features = ["v4"] }
futures-timer = "3.0.3"
dioxus-signals = "0.6.0"
getrandom = { version = "0.2.15", features = ["js"] }
instant = { version = "*", optional = true }
web-sys = { version = "0.3", features = [
    "Performance",
    "Window",
], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }


[features]
default = ["native_animation"]
wasm_animation = ["web-sys", "js-sys", "wasm-bindgen", "instant/wasm-bindgen"]
native_animation = ["instant"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
